opam-version: "2.0"
synopsis: "PPX extension for overriding modules"
description: "PPX extensions [%%override], [%%import], [%%include] and [%%rewrite] to import and change module interfaces."
maintainer: "Thierry Martinez <Thierry.Martinez@inria.fr>"
authors: "Thierry Martinez <Thierry.Martinez@inria.fr>"
homepage: "https://gitlab.inria.fr/tmartine/override"
bug-reports: "https://gitlab.inria.fr/tmartine/override/issues"
license: "BSD"
dev-repo: "git+https://gitlab.inria.fr/tmartine/override.git"
depends: [
  "dune" {>= "1.2"}
  "ocaml" {>= "4.02.0" & < "4.08.0"}]
