opam-version: "2.0"
synopsis: "PPX extension for overriding modules"
description: "PPX extensions [%%override], [%%import], [%%include] and [%%rewrite] to import and change module interfaces."
maintainer: "Thierry Martinez <Thierry.Martinez@inria.fr>"
authors: "Thierry Martinez <Thierry.Martinez@inria.fr>"
homepage: "https://gitlab.inria.fr/tmartine/override"
bug-reports: "https://gitlab.inria.fr/tmartine/override/issues"
license: "BSD"
dev-repo: "git+https://gitlab.inria.fr/tmartine/override.git"
build: [["dune" "build" "-p" name "-j" jobs]]
depends: [
  "dune" {>= "1.9.1"}
  "ppxlib" {>= "1.5.0"}
  "stdcompat" {>= "9"}
  "ppx_deriving" {>= "4.2.1"}
  "cppo" {>= "1.6.4"}
  "ocaml" {>= "4.04.1" & < "4.08.0"}] # no ppxlib for OCaml <4.04.1
